updated link to take us to my profile page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h3>Another title</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptas, quod ex atque, blanditiis veniam harum, quia omnis eius iure unde ullam rerum esse. Nulla assumenda atque temporibus, ab nam.</p>
 
-      <a href="">This is how you really do it</a>
+      <a href="https://kkittlive.github.io/profile/">This is how you really do it</a>
 
       <h3>Final title</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptas, quod ex atque, blanditiis veniam harum, quia omnis eius iure unde ullam rerum esse. Nulla assumenda atque temporibus, ab nam.</p>
